# afrl

./: .gitignore  README.md  data_preprocessing.ipynb  evaluate_lstm.py  pyproject.toml  submit_configs.sh  train.slurm
data/scripts/: fpv_sources.txt  mid-air_sources.txt
model_configs/: gru_1024_1_10.json  gru_1024_1_20.json  gru_1024_1_30.json  gru_1024_1_40.json  gru_1024_1_50.json  gru_1024_2_10.json  gru_1024_2_20.json  gru_1024_2_30.json  gru_1024_2_40.json  gru_1024_2_50.json  gru_1024_3_10.json  gru_1024_3_20.json  gru_1024_3_30.json  gru_1024_3_40.json  gru_1024_3_50.json  gru_1024_4_10.json  gru_1024_4_20.json  gru_1024_4_30.json  gru_1024_4_40.json  gru_1024_4_50.json  gru_1024_5_10.json  gru_1024_5_20.json  gru_1024_5_30.json  gru_1024_5_40.json  gru_1024_5_50.json  gru_128_1_10.json  gru_128_1_20.json  gru_128_1_40.json  gru_128_1_50.json  gru_128_2_10.json  gru_128_2_20.json  gru_128_2_30.json  gru_128_2_40.json  gru_128_2_50.json  gru_128_3_10.json  gru_128_3_20.json  gru_128_3_30.json  gru_128_3_40.json  gru_128_3_50.json  gru_128_4_10.json  (+110 more)
src/: datasets.py  generate_configs.py  get_data.py  main_lstm.py  models.py  models_lstm.py  preprocessing.py
